Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/Core.pas

{*
 * Create a new basic block without inserting it into a function.
 *
 * @see llvm::BasicBlock::Create()
  }
function LLVMCreateBasicBlockInContext(C:TLLVMContextRef; Name:Pchar):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Append a basic block to the end of a function.
 *
 * @see llvm::BasicBlock::Create()
  }
function LLVMAppendBasicBlockInContext(C:TLLVMContextRef; Fn:TLLVMValueRef; Name:Pchar):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Append a basic block to the end of a function using the global
 * context.
 *
 * @see llvm::BasicBlock::Create()
  }
function LLVMAppendBasicBlock(Fn:TLLVMValueRef; Name:Pchar):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Insert a basic block in a function before another basic block.
 *
 * The function to add to is determined by the function of the
 * passed basic block.
 *
 * @see llvm::BasicBlock::Create()
  }
function LLVMInsertBasicBlockInContext(C:TLLVMContextRef; BB:TLLVMBasicBlockRef; Name:Pchar):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Insert a basic block in a function using the global context.
 *
 * @see llvm::BasicBlock::Create()
  }
function LLVMInsertBasicBlock(InsertBeforeBB:TLLVMBasicBlockRef; Name:Pchar):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Remove a basic block from a function and delete it.
 *
 * This deletes the basic block from its containing function and deletes
 * the basic block itself.
 *
 * @see llvm::BasicBlock::eraseFromParent()
  }
procedure LLVMDeleteBasicBlock(BB:TLLVMBasicBlockRef);cdecl;external libllvm;
{*
 * Remove a basic block from a function.
 *
 * This deletes the basic block from its containing function but keep
 * the basic block alive.
 *
 * @see llvm::BasicBlock::removeFromParent()
  }
procedure LLVMRemoveBasicBlockFromParent(BB:TLLVMBasicBlockRef);cdecl;external libllvm;
{*
 * Move a basic block to before another one.
 *
 * @see llvm::BasicBlock::moveBefore()
  }
procedure LLVMMoveBasicBlockBefore(BB:TLLVMBasicBlockRef; MovePos:TLLVMBasicBlockRef);cdecl;external libllvm;
{*
 * Move a basic block to after another one.
 *
 * @see llvm::BasicBlock::moveAfter()
  }
procedure LLVMMoveBasicBlockAfter(BB:TLLVMBasicBlockRef; MovePos:TLLVMBasicBlockRef);cdecl;external libllvm;
{*
 * Obtain the first instruction in a basic block.
 *
 * The returned LLVMValueRef corresponds to a llvm::Instruction
 * instance.
  }
function LLVMGetFirstInstruction(BB:TLLVMBasicBlockRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the last instruction in a basic block.
 *
 * The returned LLVMValueRef corresponds to an LLVM:Instruction.
  }
function LLVMGetLastInstruction(BB:TLLVMBasicBlockRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValueInstruction Instructions
 *
 * Functions in this group relate to the inspection and manipulation of
 * individual instructions.
 *
 * In the C++ API, an instruction is modeled by llvm::Instruction. This
 * class has a large number of descendents. llvm::Instruction is a
 * llvm::Value and in the C API, instructions are modeled by
 * LLVMValueRef.
 *
 * This group also contains sub-groups which operate on specific
 * llvm::Instruction types, e.g. llvm::CallInst.
 *
 * @
  }
{*
 * Determine whether an instruction has any metadata attached.
  }
function LLVMHasMetadata(Val:TLLVMValueRef):longint;cdecl;external libllvm;
{*
 * Return metadata associated with an instruction value.
  }
function LLVMGetMetadata(Val:TLLVMValueRef; KindID:dword):TLLVMValueRef;cdecl;external libllvm;
{*
 * Set metadata associated with an instruction value.
  }
procedure LLVMSetMetadata(Val:TLLVMValueRef; KindID:dword; Node:TLLVMValueRef);cdecl;external libllvm;
{*
 * Returns the metadata associated with an instruction value, but filters out
 * all the debug locations.
 *
 * @see llvm::Instruction::getAllMetadataOtherThanDebugLoc()
  }
function LLVMInstructionGetAllMetadataOtherThanDebugLoc(Instr:TLLVMValueRef; NumEntries:Psize_t):PLLVMValueMetadataEntry;cdecl;external libllvm;
{*
 * Obtain the basic block to which an instruction belongs.
 *
 * @see llvm::Instruction::getParent()
  }
function LLVMGetInstructionParent(Inst:TLLVMValueRef):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Obtain the instruction that occurs after the one specified.
 *
 * The next instruction will be from the same basic block.
 *
 * If this is the last instruction in a basic block, NULL will be
 * returned.
  }
function LLVMGetNextInstruction(Inst:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the instruction that occurred before this one.
 *
 * If the instruction is the first instruction in a basic block, NULL
 * will be returned.
  }
function LLVMGetPreviousInstruction(Inst:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Remove an instruction.
 *
 * The instruction specified is removed from its containing building
 * block but is kept alive.
 *
 * @see llvm::Instruction::removeFromParent()
  }
procedure LLVMInstructionRemoveFromParent(Inst:TLLVMValueRef);cdecl;external libllvm;
{*
 * Remove and delete an instruction.
 *
 * The instruction specified is removed from its containing building
 * block and then deleted.
 *
 * @see llvm::Instruction::eraseFromParent()
  }
procedure LLVMInstructionEraseFromParent(Inst:TLLVMValueRef);cdecl;external libllvm;
{*
 * Delete an instruction.
 *
 * The instruction specified is deleted. It must have previously been
 * removed from its containing building block.
 *
 * @see llvm::Value::deleteValue()
  }
procedure LLVMDeleteInstruction(Inst:TLLVMValueRef);cdecl;external libllvm;
{*
 * Obtain the code opcode for an individual instruction.
 *
 * @see llvm::Instruction::getOpCode()
  }
function LLVMGetInstructionOpcode(Inst:TLLVMValueRef):TLLVMOpcode;cdecl;external libllvm;
{*
 * Obtain the predicate of an instruction.
 *
 * This is only valid for instructions that correspond to llvm::ICmpInst.
 *
 * @see llvm::ICmpInst::getPredicate()
  }
function LLVMGetICmpPredicate(Inst:TLLVMValueRef):TLLVMIntPredicate;cdecl;external libllvm;
{*
 * Obtain the float predicate of an instruction.
 *
 * This is only valid for instructions that correspond to llvm::FCmpInst.
 *
 * @see llvm::FCmpInst::getPredicate()
  }
function LLVMGetFCmpPredicate(Inst:TLLVMValueRef):TLLVMRealPredicate;cdecl;external libllvm;
{*
 * Create a copy of 'this' instruction that is identical in all ways
 * except the following:
 *   * The instruction has no parent
 *   * The instruction has no name
 *
 * @see llvm::Instruction::clone()
  }
function LLVMInstructionClone(Inst:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Determine whether an instruction is a terminator. This routine is named to
 * be compatible with historical functions that did this by querying the
 * underlying C++ type.
 *
 * @see llvm::Instruction::isTerminator()
  }
function LLVMIsATerminatorInst(Inst:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the first debug record attached to an instruction.
 *
 * Use LLVMGetNextDbgRecord() and LLVMGetPreviousDbgRecord() to traverse the
 * sequence of DbgRecords.
 *
 * Return the first DbgRecord attached to Inst or NULL if there are none.
 *
 * @see llvm::Instruction::getDbgRecordRange()
  }
function LLVMGetFirstDbgRecord(Inst:TLLVMValueRef):TLLVMDbgRecordRef;cdecl;external libllvm;
{*
 * Obtain the last debug record attached to an instruction.
 *
 * Return the last DbgRecord attached to Inst or NULL if there are none.
 *
 * @see llvm::Instruction::getDbgRecordRange()
  }
function LLVMGetLastDbgRecord(Inst:TLLVMValueRef):TLLVMDbgRecordRef;cdecl;external libllvm;
{*
 * Obtain the next DbgRecord in the sequence or NULL if there are no more.
 *
 * @see llvm::Instruction::getDbgRecordRange()
  }
function LLVMGetNextDbgRecord(DbgRecord:TLLVMDbgRecordRef):TLLVMDbgRecordRef;cdecl;external libllvm;
{*
 * Obtain the previous DbgRecord in the sequence or NULL if there are no more.
 *
 * @see llvm::Instruction::getDbgRecordRange()
  }
function LLVMGetPreviousDbgRecord(DbgRecord:TLLVMDbgRecordRef):TLLVMDbgRecordRef;cdecl;external libllvm;
{*
 * @defgroup LLVMCCoreValueInstructionCall Call Sites and Invocations
 *
 * Functions in this group apply to instructions that refer to call
 * sites and invocations. These correspond to C++ types in the
 * llvm::CallInst class tree.
 *
 * @
  }
{*
 * Obtain the argument count for a call instruction.
 *
 * This expects an LLVMValueRef that corresponds to a llvm::CallInst,
 * llvm::InvokeInst, or llvm:FuncletPadInst.
 *
 * @see llvm::CallInst::getNumArgOperands()
 * @see llvm::InvokeInst::getNumArgOperands()
 * @see llvm::FuncletPadInst::getNumArgOperands()
  }
function LLVMGetNumArgOperands(Instr:TLLVMValueRef):dword;cdecl;external libllvm;
{*
 * Set the calling convention for a call instruction.
 *
 * This expects an LLVMValueRef that corresponds to a llvm::CallInst or
 * llvm::InvokeInst.
 *
 * @see llvm::CallInst::setCallingConv()
 * @see llvm::InvokeInst::setCallingConv()
  }
procedure LLVMSetInstructionCallConv(Instr:TLLVMValueRef; CC:dword);cdecl;external libllvm;
{*
 * Obtain the calling convention for a call instruction.
 *
 * This is the opposite of LLVMSetInstructionCallConv(). Reads its
 * usage.
 *
 * @see LLVMSetInstructionCallConv()
  }
function LLVMGetInstructionCallConv(Instr:TLLVMValueRef):dword;cdecl;external libllvm;
procedure LLVMSetInstrParamAlignment(Instr:TLLVMValueRef; Idx:TLLVMAttributeIndex; Align:dword);cdecl;external libllvm;
procedure LLVMAddCallSiteAttribute(C:TLLVMValueRef; Idx:TLLVMAttributeIndex; A:TLLVMAttributeRef);cdecl;external libllvm;
function LLVMGetCallSiteAttributeCount(C:TLLVMValueRef; Idx:TLLVMAttributeIndex):dword;cdecl;external libllvm;
procedure LLVMGetCallSiteAttributes(C:TLLVMValueRef; Idx:TLLVMAttributeIndex; Attrs:PLLVMAttributeRef);cdecl;external libllvm;
function LLVMGetCallSiteEnumAttribute(C:TLLVMValueRef; Idx:TLLVMAttributeIndex; KindID:dword):TLLVMAttributeRef;cdecl;external libllvm;
function LLVMGetCallSiteStringAttribute(C:TLLVMValueRef; Idx:TLLVMAttributeIndex; K:Pchar; KLen:dword):TLLVMAttributeRef;cdecl;external libllvm;
procedure LLVMRemoveCallSiteEnumAttribute(C:TLLVMValueRef; Idx:TLLVMAttributeIndex; KindID:dword);cdecl;external libllvm;
procedure LLVMRemoveCallSiteStringAttribute(C:TLLVMValueRef; Idx:TLLVMAttributeIndex; K:Pchar; KLen:dword);cdecl;external libllvm;
{*
 * Obtain the function type called by this instruction.
 *
 * @see llvm::CallBase::getFunctionType()
  }
function LLVMGetCalledFunctionType(C:TLLVMValueRef):TLLVMTypeRef;cdecl;external libllvm;
{*
 * Obtain the pointer to the function invoked by this instruction.
 *
 * This expects an LLVMValueRef that corresponds to a llvm::CallInst or
 * llvm::InvokeInst.
 *
 * @see llvm::CallInst::getCalledOperand()
 * @see llvm::InvokeInst::getCalledOperand()
  }
function LLVMGetCalledValue(Instr:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the number of operand bundles attached to this instruction.
 *
 * This only works on llvm::CallInst and llvm::InvokeInst instructions.
 *
 * @see llvm::CallBase::getNumOperandBundles()
  }
function LLVMGetNumOperandBundles(C:TLLVMValueRef):dword;cdecl;external libllvm;
{*
 * Obtain the operand bundle attached to this instruction at the given index.
 * Use LLVMDisposeOperandBundle to free the operand bundle.
 *
 * This only works on llvm::CallInst and llvm::InvokeInst instructions.
  }
function LLVMGetOperandBundleAtIndex(C:TLLVMValueRef; Index:dword):TLLVMOperandBundleRef;cdecl;external libllvm;
{*
 * Obtain whether a call instruction is a tail call.
 *
 * This only works on llvm::CallInst instructions.
 *
 * @see llvm::CallInst::isTailCall()
  }
function LLVMIsTailCall(CallInst:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
 * Set whether a call instruction is a tail call.
 *
 * This only works on llvm::CallInst instructions.
 *
 * @see llvm::CallInst::setTailCall()
  }
procedure LLVMSetTailCall(CallInst:TLLVMValueRef; IsTailCall:TLLVMBool);cdecl;external libllvm;
